--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Hugo site to VPS
+name: system-update-workflow
 
 on:
   push:
@@ -6,24 +6,25 @@ on:
       - main
 
 jobs:
-  deploy:
+  run-sync:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: data-checkout
+        uses: actions/checkout@v4
         with:
           submodules: recursive
           fetch-depth: 0
 
-      - name: Setup Hugo
+      - name: init-environment
         uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: 'latest'
           extended: true
 
-      - name: Build
+      - name: data-processing
         run: hugo --minify
 
-      - name: Deploy to VPS
+      - name: rsync-remote
         uses: easingthemes/ssh-deploy@main
         env:
           SSH_PRIVATE_KEY: ${{ secrets.VPS_KEY }}
