--- a/hugo.yaml
+++ b/hugo.yaml
@@ -5,7 +5,7 @@ theme: PaperMod
 pagination:
   pagerSize: 10
 
-enableRobotsTXT: false
+enableRobotsTXT: true
 buildDrafts: false
 buildFuture: false
 buildExpired: false
