update system data

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,13 +15,13 @@ minify:
   minifyOutput: true
 
 # --- 追加：投稿ページ（posts）を一括でnoindexにし、サイトマップから除外する ---
-[[cascade]]
-  [cascade.params]
-    robotsNoIndex: true
-  [cascade.sitemap]
-    disable: true
-  [cascade.target]
-    path: "/posts/**"
+cascade:
+  - params:
+      robotsNoIndex: true
+    sitemap:
+      disable: true
+    target:
+      path: "/posts/**"
 
 params:
   env: production
