--- a/hugo.yaml
+++ b/hugo.yaml
@@ -84,6 +84,10 @@ menu:
       name: tags
       url: /tags/
       weight: 20
+    - identifier: test
+      name: test
+      url: /search/
+      weight: 20
 
 pygmentsUseClasses: true
 
