--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,6 @@
 baseURL: "https://test-hugo.wikinist.com/"
 title: "俺の爆速ブログ"
 theme: PaperMod
-robotsNoIndex: true
 
 pagination:
   pagerSize: 10
@@ -34,10 +33,10 @@ cascade:
 params:
   # テストサイト用設定++++++++++++++++++++++++++++++++
   # これを true にすると、トップページも含む全ページが noindex になります
-  # robotsNoIndex: true
+  robotsNoIndex: true
   # テストサイト用設定++++++++++++++++++++++++++++++++
-
-  env: production
+  
+  env: development
   title: "俺の爆速ブログ"
   description: "ブログ"
   keywords: [Blog, Portfolio, PaperMod]
