--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,10 +41,6 @@ jobs:
           REMOTE_PORT: ${{ secrets.SSH_PORT }}
           TARGET: ${{ secrets.VPS_TARGET }}
           SOURCE: "public/"
-          # --- 高速化のための ARGS 変更 ---
-          # -c (checksum) を外して時間比較に任せる
-          # -O (omit-dir-times) でディレクトリ更新時間の同期を省く
-          # -S (sparse) で効率化
+          # 改行を含まないように1行で記述するのが安全です
           ARGS: "-avz --delete -O"
-          # SSH接続を維持するオプションを追加（接続の作り直しを防ぐ）
           SSH_ARGS: "-o ControlMaster=auto -o ControlPath=/tmp/ssh-%r@%h:%p -o ControlPersist=600"
